Corrección de datos de contacto

--- a/app/views/pages/form_company.html
+++ b/app/views/pages/form_company.html
@@ -153,8 +153,8 @@
                         <div class="span3 offset1">
                             <address>
                                 <strong>Dirección</strong><br>
-                                Malabia 1720, Piso 2<br>
-                                Capital Federal, CP 1414<br>
+                                Pte. Perón 1500<br>
+                                Pilar, Pcia. de Buenos Aires, CP 1664<br>
                                 <abbr title="Phone"></abbr>
                             </address>
 
@@ -166,7 +166,7 @@
                             <address>
                                 <strong>Teléfono</strong><br>
 
-                                <p>(+54)-11-5365-5921</p>
+                                <p>0800-111-DEAL(3315)</p>
                             </address>
 
                             <address>
@@ -379,8 +379,8 @@
                         <div class="span3 offset1">
                             <address>
                                 <strong>Dirección</strong><br>
-                                Malabia 1720, Piso 2<br>
-                                Capital Federal, CP 1414<br>
+                                Pte. Perón 1500<br>
+                                Pilar, Pcia. de Buenos Aires, CP 1664<br>
                                 <abbr title="Phone"></abbr>
                             </address>
 
@@ -392,7 +392,7 @@
                             <address>
                                 <strong>Teléfono</strong><br>
 
-                                <p>(+54)-11-5365-5921</p>
+                                <p>0800-111-DEAL(3315)</p>
                             </address>
 
                             <address>
