--- a/app/views/pages/terms_and_conds.html.erb
+++ b/app/views/pages/terms_and_conds.html.erb
@@ -400,7 +400,7 @@
           <div class="span6">
             <ul id="custumer-support" class="pull-right">
               <li class="custumer-support-title">Atención al Cliente</li>
-              <li class="telephone-number">0800-345-TRIP(8747)</li>
+              <li class="telephone-number">0800-111-DEAL(3315)</li>
               <li class="contact-mail"><a href="<%= pages_contact_path %>"><i class="icon-contact-mail"></i> info@dealhunter.com</a></li>
             </ul>
           </div>
