--- a/app/views/pages/work_with_us.html.erb
+++ b/app/views/pages/work_with_us.html.erb
@@ -133,8 +133,8 @@
                 <div class="span3 offset1">
                   <address>
                     <strong>Dirección</strong><br>
-                    Malabia 1720, Piso 2<br>
-                    Capital Federal, CP 1414<br>
+                    Pte. Perón 1500<br>
+                    Pilar, Pcia. de Buenos Aires, CP 1664<br>
                     <abbr title="Phone"></abbr>
                   </address>
 
@@ -145,7 +145,7 @@
 
                   <address>
                     <strong>Teléfono</strong><br>
-                    <p>(+54)-11-5365-5921</p>
+                    <p>0800-111-DEAL(3315)</p>
                   </address>
 
                   <address>
@@ -334,8 +334,8 @@
                 <div class="span3 offset1">
                   <address>
                     <strong>Dirección</strong><br>
-                    Malabia 1720, Piso 2<br>
-                    Capital Federal, CP 1414<br>
+                    Pte. Perón 1500<br>
+                    Pilar, Pcia. de Buenos Aires, CP 1664<br>
                     <abbr title="Phone"></abbr>
                   </address>
 
@@ -346,7 +346,7 @@
 
                   <address>
                     <strong>Teléfono</strong><br>
-                    <p>(+54)-11-5365-5921</p>
+                    <p>0800-111-DEAL(3315)</p>
                   </address>
 
                   <address>
