--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -129,8 +129,8 @@
                 <div class="span3 offset1">
                   <address>
                     <strong>Dirección</strong><br>
-                    Malabia 1720, Piso 2<br>
-                    Capital Federal, CP 1414<br>
+                    Pte. Perón 1500<br>
+                    Pilar, Pcia. de Buenos Aires, CP 1664<br>
                     <abbr title="Phone"></abbr>
                   </address>
 
@@ -141,7 +141,7 @@
 
                   <address>
                     <strong>Teléfono</strong><br>
-                    <p>(+54)-11-5365-5921</p>
+                    <p>0800-111-DEAL(3315)</p>
                   </address>
 
                   <address>
@@ -201,8 +201,8 @@
                 <div class="span3 offset1">
                   <address>
                     <strong>Dirección</strong><br>
-                    Malabia 1720, Piso 2<br>
-                    Capital Federal, CP 1414<br>
+                    Pte. Perón 1500<br>
+                    Pilar, Pcia. de Buenos Aires, CP 1664<br>
                     <abbr title="Phone"></abbr>
                   </address>
 
@@ -213,7 +213,7 @@
 
                   <address>
                     <strong>Teléfono</strong><br>
-                    <p>(+54)-11-5365-5921</p>
+                    <p>0800-111-DEAL(3315)</p>
                   </address>
 
                   <address>
