--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,7 +66,7 @@
     <header id="top" class="light-shadowed">
       <div class="container">
         <div class="row">
-          <div class="span3" id="logo-header"><a href="<%= offers_path %>"><img src="/assets/logo-header.png"></a></div>
+          <div class="span3" id="logo-header"><a href="<%= root_path %>"><img src="/assets/logo-header.png"></a></div>
 
           <div class="span6 offset3 clearfix" id="header-data">
             <nav class="pull-left">
