--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -22,6 +22,38 @@
                         <li class="offer-price">$<%= offer.prizes.first.discounted_price.to_i unless offer.prizes.first.nil? %></li>
                       </ul>
 
+                      <%if offer.start_date.to_date < Date.current and offer.end_date.to_date > Date.current%>
+                          <ul class="time-left pull-left">
+                            <li>
+                              <ul class="inline" style="margin-top:8px;">
+                                <li><ul class="inline"><li>En curso </li><li></li></ul></li>
+                              </ul>
+                            </li>
+                            <li><p>Aprovechala!</p></li>
+                          </ul>
+
+                          <%elsif offer.start_date.to_date < Date.current and offer.end_date.to_date < Date.current%>
+                          <ul class="time-left pull-left">
+                            <li>
+                              <ul class="inline" style="margin-top:8px;">
+                                <li><ul class="inline"><li>Finalizada </li><li></li></ul></li>
+                              </ul>
+                            </li>
+                            <li><p>No pierdas otra!</p></li>
+                          </ul>
+                          <%else%>
+                          <ul class="time-left pull-left">
+                            <li>
+                              <% distance = time_distance(offer.start_date.to_datetime) %>
+                              <ul class="inline" style="margin-top:8px;">
+                                <li><ul class="inline"><li><%= distance[:days] %></li><li>D</li></ul></li>
+                                <li><ul class="inline"><li><%= distance[:hours] %></li><li>H</li></ul></li>
+                                <li><ul class="inline"><li><%= distance[:minutes] %></li><li>M</li></ul></li>
+                              </ul>
+                            </li>
+                            <li><p>Para el comienzo</p></li>
+                          </ul>
+                          <%end%>
                     <!-- End of .flap-items -->
                 <!-- 	/* solapa --------------------------- */-->
                         <ul class="secondary-info pull-right">
