--- a/app/views/users/offers_client_user.html.erb
+++ b/app/views/users/offers_client_user.html.erb
@@ -1,6 +1,11 @@
 <div class="container" id="main-content">
   <div class="row">
     <section class="span8 rounded-borders light-shadowed">
+
+      <a href="<%= offers_path %>" role="button">
+        <h2 id="recommend-to-friend" class="pull-right rounded-borders light-shadowed">Ver mapa</h2>
+      </a>
+
       <header class="out rounded-borders-btn">
         <h2>Ofertas</h2>
       </header>
