--- a/app/views/users/offers_company_user.html.erb
+++ b/app/views/users/offers_company_user.html.erb
@@ -27,8 +27,19 @@
             <div id="myTabContent" class="tab-content">
 
               <div class="tab-pane fade in active clearfix" id="all">
+                <% if @offers.empty?%>
 
-                <% @offers.each do |offer| %>
+                    <div class="media hotel-item">
+
+                      <div class="media-body">
+                        <h5 style="text-align: center;">Aún no cargaste ninguna oferta</h5>
+                      </div><!--end media-body-->
+                    </div><!--end media-->
+
+
+                <% else %>
+
+                    <% @offers.each do |offer| %>
 
                         <div class="media hotel-item">
                           <a class="pull-left" href="#offer_<%=offer.id%>">
@@ -43,12 +54,26 @@
                         </div><!--end media-->
 
                     <% end %>
+                    <%= paginate @offers %>
+                <%end%>
 
-                <%= paginate @offers %>
+
 
               </div><!--end myTabContent-->
 
               <div class="tab-pane fade" id="active">
+
+                <% if @actual_offers.empty?%>
+
+                    <div class="media hotel-item">
+
+                      <div class="media-body">
+                        <h5 style="text-align: center;">No posees ofertas activas al momento</h5>
+                      </div><!--end media-body-->
+                    </div><!--end media-->
+
+
+                <% else %>
 
                     <% @actual_offers.each do |offer| %>
 
@@ -65,27 +90,41 @@
                         </div><!--end media-->
 
                     <% end %>
+                <%end%>
 
 
               </div>
               <div class="tab-pane fade" id="old">
-
-                <% @old_offers.each do |offer| %>
+                <% if @old_offers.empty?%>
 
                     <div class="media hotel-item">
-                      <a class="pull-left" href="#">
-                        <% unless offer.photo.nil? %>
-                            <img src="<%= offer.photo%>" class="media-object imgSize">
-                        <%end%>
-                      </a>
-                      <div class="media-body">
-                        <h4 class="media-heading"><a href="#offer_<%=offer.id%>" role="button"  data-toggle="modal"><%= offer.name %></a></h4>
-                        <h5><%=offer.start_date.strftime('%d/%m/%Y') %> / <%= offer.end_date.strftime('%d/%m/%Y')%></h5>
 
+                      <div class="media-body">
+                        <h5 style="text-align: center;">No posees ofertas finalizadas</h5>
                       </div><!--end media-body-->
                     </div><!--end media-->
 
-                <% end %>
+
+                <% else %>
+
+                    <% @old_offers.each do |offer| %>
+
+                        <div class="media hotel-item">
+                          <a class="pull-left" href="#">
+                            <% unless offer.photo.nil? %>
+                                <img src="<%= offer.photo%>" class="media-object imgSize">
+                            <%end%>
+                          </a>
+                          <div class="media-body">
+                            <h4 class="media-heading"><a href="#offer_<%=offer.id%>" role="button"  data-toggle="modal"><%= offer.name %></a></h4>
+                            <h5><%=offer.start_date.strftime('%d/%m/%Y') %> / <%= offer.end_date.strftime('%d/%m/%Y')%></h5>
+
+                          </div><!--end media-body-->
+                        </div><!--end media-->
+
+                    <% end %>
+
+                 <% end  %>
 
               </div>
 
