new offer & new branch front validation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,8 @@
   <script src="/../assets/bootstrap-tab.js"></script>
   <script src="/../assets/bootstrap-modal.js"></script>
   <script src="/../assets/jquery_nested_form.js"></script>
+  <script src="/../assets/validationScript.js"></script>
+
 
   <!--    <link href="/assets/bootstrap-responsive.css" rel="stylesheet">
   -->
