--- a/app/views/users/branches_company_user.html.erb
+++ b/app/views/users/branches_company_user.html.erb
@@ -111,7 +111,11 @@
             <button class="btn" data-dismiss="modal" aria-hidden="true">Cancelar</button>
             <button class="btn btn-vontrip" type="submit">Guardar</button>
           </div>
-      <% end %>
+          <script type="text/javascript">
+              assignBranchValidation();
+          </script>
+
+    <% end %>
 
 
       </div>  <!--end Modal-->
