--- a/app/views/users/offers_company_user.html.erb
+++ b/app/views/users/offers_company_user.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <section class="span8 rounded-borders light-shadowed">
 
-      <a href="<%= new_offer_path %>" role="button">
+      <a href="<%= new_offer_path %>" role="button" >
         <h2 id="recommend-to-friend" class="pull-right rounded-borders light-shadowed">Nueva oferta</h2>
       </a>
 
@@ -27,14 +27,16 @@
             <div id="myTabContent" class="tab-content">
 
               <div class="tab-pane fade in active clearfix" id="all">
-                <% if @offers.empty?%>
+                <% if @offers.empty? %>
 
                     <div class="media hotel-item">
 
                       <div class="media-body">
                         <h5 style="text-align: center;">Aún no cargaste ninguna oferta</h5>
-                      </div><!--end media-body-->
-                    </div><!--end media-->
+                      </div>
+                      <!--end media-body-->
+                    </div>
+                    <!--end media-->
 
 
                 <% else %>
@@ -42,35 +44,43 @@
                     <% @offers.each do |offer| %>
 
                         <div class="media hotel-item">
-                          <a class="pull-left" href="#offer_<%=offer.id%>">
+                          <a class="pull-left" href="#offer_<%= offer.id %>">
                             <% unless offer.photo.nil? %>
                                 <img src="<%= offer.photo %>" class="media-object imgSize">
-                            <%end%>
+                            <% end %>
                           </a>
+
                           <div class="media-body">
-                            <h4 class="media-heading"><a href="#offer_<%=offer.id%>" role="button"  data-toggle="modal"><%= offer.name %></a></h4>
-                            <h5><%=offer.start_date.strftime('%d/%m/%Y') %> / <%= offer.end_date.strftime('%d/%m/%Y')%></h5>
-                          </div><!--end media-body-->
-                        </div><!--end media-->
+                            <h4 class="media-heading">
+                              <a href="#offer_<%= offer.id %>" role="button" data-toggle="modal"><%= offer.name %></a>
+                            </h4>
+                            <h5><%= offer.start_date.strftime('%d/%m/%Y') %>
+                              / <%= offer.end_date.strftime('%d/%m/%Y') %></h5>
+                          </div>
+                          <!--end media-body-->
+                        </div>
+                        <!--end media-->
 
                     <% end %>
                     <%= paginate @offers %>
-                <%end%>
+                <% end %>
 
 
-
-              </div><!--end myTabContent-->
+              </div>
+              <!--end myTabContent-->
 
               <div class="tab-pane fade" id="active">
 
-                <% if @actual_offers.empty?%>
+                <% if @actual_offers.empty? %>
 
                     <div class="media hotel-item">
 
                       <div class="media-body">
                         <h5 style="text-align: center;">No posees ofertas activas al momento</h5>
-                      </div><!--end media-body-->
-                    </div><!--end media-->
+                      </div>
+                      <!--end media-body-->
+                    </div>
+                    <!--end media-->
 
 
                 <% else %>
@@ -80,29 +90,37 @@
                         <div class="media hotel-item">
                           <a class="pull-left" href="#">
                             <% unless offer.photo.nil? %>
-                                <img src="<%= offer.photo%>" class="media-object imgSize">
-                            <%end%>
+                                <img src="<%= offer.photo %>" class="media-object imgSize">
+                            <% end %>
                           </a>
+
                           <div class="media-body">
-                            <h4 class="media-heading"><a href="#offer_<%=offer.id%>" role="button"  data-toggle="modal" ><%= offer.name %></a></h4>
-                            <h5><%=offer.start_date.strftime('%d/%m/%Y') %> / <%= offer.end_date.strftime('%d/%m/%Y')%></h5>
-                          </div><!--end media-body-->
-                        </div><!--end media-->
+                            <h4 class="media-heading">
+                              <a href="#offer_<%= offer.id %>" role="button" data-toggle="modal"><%= offer.name %></a>
+                            </h4>
+                            <h5><%= offer.start_date.strftime('%d/%m/%Y') %>
+                              / <%= offer.end_date.strftime('%d/%m/%Y') %></h5>
+                          </div>
+                          <!--end media-body-->
+                        </div>
+                        <!--end media-->
 
                     <% end %>
-                <%end%>
+                <% end %>
 
 
               </div>
               <div class="tab-pane fade" id="old">
-                <% if @old_offers.empty?%>
+                <% if @old_offers.empty? %>
 
                     <div class="media hotel-item">
 
                       <div class="media-body">
                         <h5 style="text-align: center;">No posees ofertas finalizadas</h5>
-                      </div><!--end media-body-->
-                    </div><!--end media-->
+                      </div>
+                      <!--end media-body-->
+                    </div>
+                    <!--end media-->
 
 
                 <% else %>
@@ -112,19 +130,25 @@
                         <div class="media hotel-item">
                           <a class="pull-left" href="#">
                             <% unless offer.photo.nil? %>
-                                <img src="<%= offer.photo%>" class="media-object imgSize">
-                            <%end%>
+                                <img src="<%= offer.photo %>" class="media-object imgSize">
+                            <% end %>
                           </a>
-                          <div class="media-body">
-                            <h4 class="media-heading"><a href="#offer_<%=offer.id%>" role="button"  data-toggle="modal"><%= offer.name %></a></h4>
-                            <h5><%=offer.start_date.strftime('%d/%m/%Y') %> / <%= offer.end_date.strftime('%d/%m/%Y')%></h5>
 
-                          </div><!--end media-body-->
-                        </div><!--end media-->
+                          <div class="media-body">
+                            <h4 class="media-heading">
+                              <a href="#offer_<%= offer.id %>" role="button" data-toggle="modal"><%= offer.name %></a>
+                            </h4>
+                            <h5><%= offer.start_date.strftime('%d/%m/%Y') %>
+                              / <%= offer.end_date.strftime('%d/%m/%Y') %></h5>
+
+                          </div>
+                          <!--end media-body-->
+                        </div>
+                        <!--end media-->
 
                     <% end %>
 
-                 <% end  %>
+                <% end %>
 
               </div>
 
@@ -150,11 +174,12 @@
         </ul>
         <h2 class="rounded-borders-btn">Información Personal</h2>
         <ul class="aside-nav">
-          <li><a href="<%= edit_user_path(current_user)%>">Mi Perfil</a></li>
+          <li><a href="<%= edit_user_path(current_user) %>">Mi Perfil</a></li>
         </ul>
         <h2 class="rounded-borders-btn">Preferencias</h2>
         <ul class="aside-nav">
-          <li><a href="<%= edit_user_registration_path %>">Contraseña</a></li>        </ul>
+          <li><a href="<%= edit_user_registration_path %>">Contraseña</a></li>
+        </ul>
         </ul>
       </div>
       <!--<div id="bags">-->
@@ -162,58 +187,19 @@
       <!--<div id="block"></div>-->
       <!--</div>-->
       <!--</div>-->
-    </aside><!--end sidebar-->
-  </div><!--end container-->
+    </aside>
+    <!--end sidebar-->
+  </div>
+  <!--end container-->
 </div><!--end row-->
 
-<div id="myModalNewOffer" class="modal modal-window hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">Nueva oferta</h3>
-  </div>
-  <div class="modal-body">
-    <div id="invitar-amigo-box">
 
-      <header class="clearfix">
-        <ul class="inline clearfix">
-          <li class="pull-left headlines">
-            <p>Aca podes registrar una nueva oferta para que tus clientes disfruten.<br><span class="red"></span></p>
-          </li>
-        </ul>
-      </header>
-      <hr>
-      <p><strong>Esto es lo que necesitamos para crear tu oferta:</strong></p>
 
-      <%= semantic_nested_form_for [Offer.new()] do |f|%>
-          <div id="nameFields">
-            <label>Nombre: <%= f.input :name, :label => false %> </label>
-          </div>
-          <div id="nameFields">
-            <label>Fecha de inicio: <%= f.input :start_date, :as => :string, :label => false%>
-            </label>
-         </div>
-         <div id="nameFields">
-             <label>Fecha de fin: <%= f.input :end_date, :as => :string, :label => false%> </label>
-         </div>
-          <div id="nameFields">
-            <label>Foto: <%= f.input :photo, :label => false%> </label>
-          </div>
-          <hr>
-          </div><!--end invitar-amigo-box-->
-
-          </div>
-          <div class="modal-footer">
-            <button class="btn" data-dismiss="modal" aria-hidden="true">Cancelar</button>
-            <button class="btn btn-vontrip" type="submit">Guardar</button>
-          </div>
-      <% end %>
-
-      </div>  <!--end Modal-->
 
 
 <% @offers.each do |offer| %>
 
-    <div id="offer_<%=offer.id%>" class="modal modal-window hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div id="offer_<%= offer.id %>" class="modal modal-window hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
         <h3 id="label"><%= offer.name %> </h3>
@@ -222,19 +208,22 @@
         <div class="media hotel-item">
           <a class="pull-right" href="#">
             <% unless offer.photo.nil? %>
-                <img src="<%= offer.photo%>" class="media-object imgCenter">
-            <%end%>
+                <img src="<%= offer.photo %>" class="media-object imgCenter">
+            <% end %>
           </a>
+
           <div class="media-body">
             <p>
               <b>Fecha de inicio:</b>
               <%= offer.start_date %>
             </p>
+
             <p>
               <b>Fecha de finalización:</b>
               <%= offer.end_date %>
             </p>
-          </div><!--end media-body-->
+          </div>
+          <!--end media-body-->
           <hr>
           <p>
             <b>Clientes adheridos: </b>
@@ -246,52 +235,57 @@
 
           <hr>
           <p class="row">
-          <div class="span3">  <b>Premio: </b>
-          <ul class="text-left">
-            <% i=1 %>
-            <% offer.prizes.each do |prize| %>
-                <li type="disc"><%= i %>) <%= prize.name %> - <%= prize.real_price %>(<%= prize.discount_percentage %>).</li>
-                <% i+=1 %>
-            <%end%>
 
-          </ul>
+          <div class="span3"><b>Premio: </b>
+            <ul class="text-left">
+              <% i=1 %>
+              <% offer.prizes.each do |prize| %>
+                  <li type="disc"><%= i %>) <%= prize.name %> - <%= prize.real_price %>(<%= prize.discount_percentage %>
+                    ).
+                  </li>
+                  <% i+=1 %>
+              <% end %>
+
+            </ul>
 
 
           </div>
-        <div class="span3"> <b>Sucursal: </b>
-          <ul class="text-left">
-            <li type="disc"> <%= offer.branch.name unless offer.branch.nil?%></li>
+          <div class="span3"><b>Sucursal: </b>
+            <ul class="text-left">
+              <li type="disc"> <%= offer.branch.name unless offer.branch.nil? %></li>
 
 
-          </ul>
-         </div>
+            </ul>
+          </div>
           </p>
           </hr>
 
           </hr>
 
-                 </div>
+        </div>
 
       </div>
     </div>
 
-<%end%>
+<% end %>
 
 <script type="text/javascript">
-    $(function() {
-        $('.datePicker').each(function() {
+    $(function () {
+        $('.datePicker').each(function () {
             $(this).datepicker();
         });
     });
 
-   function old_click(){
-       document.getElementById("old-tab").click();
-       console.log("click");
-   }
+    function old_click() {
+        document.getElementById("old-tab").click();
+        console.log("click");
+    }
 
-    function actual_click(){
+    function actual_click() {
         document.getElementById("actual-tab").click();
         console.log("click");
     }
+
+
 </script>
 
